<resources>
    <string name="app_name">VyapariVyvasayiCongressApp</string>
    <string name="title">Vyapari Vyvasayi Congress</string>
    <string name="registration">Membership Registration</string>
    <string name="name">Name</string>
    <string name="email">E-Mail</string>
    <string name="address">Address</string>
    <string name="unit">Unit</string>
    <string name="phone">Phone No</string>
    <string name="Status">Status</string>
    <string name="submit">Register</string>


    <string-array name="status">
        <item>Select</item>
        <item>President</item>
        <item>General Secretary</item>
        <item>Vice President</item>
        <item>Secretary</item>
        <item>Treasurer</item>
        <item>Executive Member</item>
        <item>Member</item>
    </string-array>
    <string-array name="blood_group">
        <item>O+ve</item>
        <item>O-ve</item>
        <item>A+ve</item>
        <item>A-ve</item>
        <item>B+ve</item>
        <item>B-ve</item>
        <item>AB+ve</item>
        <item>AB-ve</item>
    </string-array>


    <string name="textcontent">
       All India Vyapari Vyavasayi Congress is a non-governmental organization (NGO).
        The registration number of the organization is: 345/2013?(15-05-2013).
        It was established in the year 2013. All India Vyapari Vyavasayi Congress works in the area of etc.
        The organization works towards the promotion of sustainable development. The organization operates in Kerala, India.
    </string>
    <string name="reg_title">Membership Registration</string>
</resources>
